S12P21D108-17 feat: 메인, 로그인, 회원가입, 스플래시 화면 제작 완료 및 상점 페이지 작업 시작 브랜치 병합 후 재생성 예정

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -46,6 +46,10 @@ html {
   font-family: "Press Start 2P", "VT323", monospace;
 }
 
+.font-korean-pixel {
+  font-family: "DungGeunMo", "NeoDunggeunmo", sans-serif;
+}
+
 .bg-kakao {
   background-color: #fee500;
 }
